v19-my-custom-scenario/canary-traffic-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable
  namespace: canary
spec:
  selector:
    app: canary-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: canary
spec:
  selector:
    app: canary-app
  ports:
    - port: 80
      targetPort: 80
