v19-my-custom-scenario/canary-traffic-management/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-traffic-management
  namespace: canary
spec:
  ingressClassName: nginx
  rules:
  - host: app.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stable
            port: 
              number: 80
